fix: increase gap in introoduction flex for better UX

--- a/src/page-components/Hero/Hero.module.scss
+++ b/src/page-components/Hero/Hero.module.scss
@@ -28,7 +28,7 @@
 		align-items: center;
 		max-height: fit-content;
 
-		gap: 1rem;
+		gap: 1.5rem;
 
 		& p {
 			color: color.scale(vars.$color-text-light, $lightness: -24%);
